--- a/public/locales/sv/translation.json
+++ b/public/locales/sv/translation.json
@@ -5,5 +5,14 @@
   "showPassword": "Visa",
   "loginButtonLabel": "Logga in",
   "forgotPasswordPrompt": "glömt lösenord?",
-  "welcomeHeader": "Logga in på LARS"
+  "welcomeHeader": "Logga in på LARS",
+  "errorTitle": "Ett fel uppstod",
+  "authenticationFailed": "Autentiseringen misslyckades, vänligen logga in igen",
+  "unknownErrorMessage": "Ett oväntat fel uppstod. Var god uppdatera sidan",
+  "incorrectLoginDetails": "Din e-postadress eller ditt lösenord är fel, försök igen",
+  "dismissDialog": "OK",
+  "fatalErrorTitle": "Hoppsan! Tekniska problem",
+  "fatalErrorMessage": "Vi ber om ursäkt, men det verkar finnas ett problem i vårt system. Oroa dig inte, vi arbetar med det!",
+  "fatalErrorPrompt": "Vänligen försök ladda om applikationen för att fortsätta.",
+  "fatalErrorButton": "Ladda om"
 }
