Fix session management

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,24 @@
   "fatalErrorTitle": "Uh-oh! Technical Difficulties",
   "fatalErrorMessage": "We apologize, but it seems there's a hiccup in our system. Don't worry, we're on it!",
   "fatalErrorPrompt": "Please try reloading the application to continue.",
-  "fatalErrorButton": "Reload"
+  "fatalErrorButton": "Reload",
+  "reportStatus.not-started": "Remaining",
+  "reportStatus.in-progress": "Started",
+  "reportStatus.approved": "Approved",
+  "reportStatus.past-deadline": "Past due",
+  "reportGridHeader.period": "Period",
+  "reportGridHeader.teamName": "Team",
+  "reportGridHeader.reporter.name": "Reporter",
+  "reportGridHeader.reporter.phone": "Phone",
+  "reportGridHeader.reporter.email": "Email",
+  "reportGridHeader.created": "Created",
+  "reports": "Reports",
+  "teams": "Teams",
+  "underConstruction": "Under construction!",
+  "reConnectingTitle": "Connection to server lost!",
+  "reConnectingDescription": "Any changes made might not be saved. Attempting to re-connect...",
+  "connectionErrorTitle": "Unable to connect to server!",
+  "connectionErrorDescription": "Please check your internet connection and then refresh the application",
+  "reconnectedTitle": "Successfully re-connected to server!",
+  "reconnectedDescription": "The connection to the server was successfully re-established"
 }
