Add teams grid and generic grid component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,6 +25,13 @@
   "reportGridHeader.reporter.phone": "Phone",
   "reportGridHeader.reporter.email": "Email",
   "reportGridHeader.created": "Created",
+  "teamGridHeader.name": "Team",
+  "teamGridHeader.association": "Association",
+  "teamGridHeader.specialAssociation": "Special Association",
+  "teamGridHeader.mainContact.name": "Contact Name",
+  "teamGridHeader.mainContact.phone": "Contact Phone",
+  "teamGridHeader.mainContact.email": "Contact Email",
+  "teamGridHeader.created": "Created",
   "reports": "Reports",
   "teams": "Teams",
   "underConstruction": "Under construction!",
