Adding loging in as an admin

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "emailPlaceholder": "email address",
+  "usernamePlaceholder": "username/email address",
   "passwordPlaceholder": "password",
   "hidePassword": "Hide",
   "showPassword": "Show",
