--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "hidePassword": "Hide",
   "showPassword": "Show",
   "loginButtonLabel": "Login",
+  "logoutButtonLabel": "Logout",
   "forgotPasswordPrompt": "forgot password?",
   "welcomeHeader": "Login to LARS",
   "welcomeText": "The Teams Administrative Reporting System",
@@ -16,21 +17,16 @@
   "reportStatus.in-progress": "Started",
   "reportStatus.approved": "Approved",
   "reportStatus.past-deadline": "Past due",
-  "reportGridHeader.period": "Period",
-  "reportGridHeader.teamName": "Team",
-  "reportGridHeader.reporter.name": "Reporter",
-  "reportGridHeader.reporter.phone": "Phone",
-  "reportGridHeader.reporter.email": "Email",
-  "reportGridHeader.created": "Created",
-  "teamGridHeader.name": "Team",
-  "teamGridHeader.association": "Association",
-  "teamGridHeader.specialAssociation": "Special Association",
-  "teamGridHeader.mainContact.name": "Contact Name",
-  "teamGridHeader.mainContact.phone": "Contact Phone",
-  "teamGridHeader.mainContact.email": "Contact Email",
-  "teamGridHeader.created": "Created",
+  "report.GridHeader.status": "Status",
+  "report.GridHeader.period": "Period",
+  "report.GridHeader.team.name": "Team",
+  "report.GridHeader.reporter.name": "Reporter",
+  "report.GridHeader.reporter.phone": "Phone",
+  "report.GridHeader.reporter.email": "Email",
+  "report.GridHeader.report_date": "Created",
   "reports": "Reports",
   "teams": "Teams",
+  "team": "Team",
   "underConstruction": "Under construction!",
   "reConnectingTitle": "Connection to server lost!",
   "reConnectingDescription": "Any changes made might not be saved. Attempting to re-connect...",
